despliegue de pregunta

--- a/learn_or_die/views/home.erb
+++ b/learn_or_die/views/home.erb
@@ -1,10 +1,9 @@
 <html>
 
 Como te llamas
-<form action="/juego">
+<form action="/partida">
 <input type="text" name="letra">
 <input type="submit" name="iniciar" id="iniciar">
 </form>
 <%=@@mensaje%>
-
 </html>
